--- a/presentation.ipynb
+++ b/presentation.ipynb
@@ -10,6 +10,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Setting up the repo\n",
+    "Clone the SINFO workshop repo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git clone https://github.com/Francisca105/Deloitte-AI-algorithms-for-remote-driving.git"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -62,15 +79,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!wandb disabled "
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -87,6 +95,22 @@
    "outputs": [],
    "source": [
     "!python train.py --workers 8 --device 0 --batch-size 32 --data ../datasets/bad_dataset/coco.yaml --img 320 320 --cfg cfg/training/yolov7.yaml --weights yolov7.pt --name yolov7 --hyp data/hyp.scratch.p5.yaml --epochs 100"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**About the command**\n",
+    "- workers: The number of worker threads used to load the data in parallel.\n",
+    "- device: It specifies the deviced used, in this case it was 0 (GPU) but it could be something like 'cpu'...\n",
+    "- batch-size: The number of training examples utilized in one iteration.\n",
+    "- data: The path for the dataset configuration file (YAML).\n",
+    "- img: The height and width of the images.\n",
+    "- cfg: The path to the YOLOv7 model configuration file.\n",
+    "- weights: The initial weights for the model.\n",
+    "- name: The name of the run.\n",
+    "- epochs: The number of iterations."
    ]
   },
   {
@@ -184,6 +208,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**About the command**\n",
+    "- weights: The path to the weights of the model.\n",
+    "- conf: This sets the confidence threshold for predictions.\n",
+    "- img: The height and width of the images.\n",
+    "- source: It specifies the path to the image on which the model will make predictions."
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -200,13 +235,6 @@
    "source": [
     "!python detect.py --weights runs/train/yolov72/weights/good_dataset_best.pt --conf 0.15 --img-size 320 --source ../datasets/good_dataset/val/images/f23c6a78-IMG_4904.JPG"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -225,7 +253,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
